--- a/QLNhaTro/.classpath
+++ b/QLNhaTro/.classpath
@@ -20,5 +20,6 @@
 	<classpathentry kind="lib" path="C:/Users/Nguyen Trong Nghia/.p2/pool/plugins/org.eclipse.text_3.14.200.v20240915-0736.jar" sourcepath="C:/Users/Nguyen Trong Nghia/.p2/pool/plugins/org.eclipse.text_3.14.200.v20240915-0736.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Nguyen Trong Nghia/.p2/pool/plugins/org.eclipse.ui.forms_3.13.400.v20240905-1138.jar" sourcepath="C:/Users/Nguyen Trong Nghia/.p2/pool/plugins/org.eclipse.ui.forms_3.13.400.v20240905-1138.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Nguyen Trong Nghia/.p2/pool/plugins/org.eclipse.ui.workbench_3.134.0.v20241107-2150.jar" sourcepath="C:/Users/Nguyen Trong Nghia/.p2/pool/plugins/org.eclipse.ui.workbench_3.134.0.v20241107-2150.jar"/>
+	<classpathentry kind="lib" path="D:/QLNhaTro/QLNhaTro/sqljdbc_13.2.1.0_enu/sqljdbc_13.2/enu/jars/mssql-jdbc-13.2.1.jre11.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
